--- a/src/App.css
+++ b/src/App.css
@@ -12,22 +12,21 @@
   border-radius: 50%;
   position: absolute;
   top: var(--height);
+  left: var(--positionY);
 }
 
 .tube_top{
-  width: 100px;
-  height: 400px;
+  width: 300px;
+  height: 450px;
   background-color: green;
   position: absolute;
   top: 0px;
-  left: var(--horizontalSpaceBetweenTubes);
 }
 
 .tube_bottom{
-  width: 100px;
-  height: 400px;
+  width: 300px;
+  height: 550px;
   background-color: green;
   position: absolute;
   bottom: 0px;
-  left: var(--horizontalSpaceBetweenTubes);
 }
